<resources>
    <string name="app_name">FirebaseChatting</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_friend">My friends</string>
    <string name="tab_rooms">Chatting rooms</string>
    <string name="sign_hint_email">Input login e-mail</string>
    <string name="sign_check_email">Invalid e-mail</string>
    <string name="sign_hint_pass">Input login password</string>
    <string name="sign_check_pass">Invalid password</string>
    <string name="sign_signin">Sign in</string>
    <string name="sign_signup_message">Unregistered e-mail.\nWould you like to register</string>
    <string name="sign_emailcheck_message">Sended e-mail.\nE-mail check please</string>
    <string name="sign_signupfail_message">Signup failed.\nE-mail and password check please</string>
    <string name="friend_find_fail">Not found user</string>
    <string name="room_create_fail">Non selected user</string>
    <string name="input_find_friend">Input friend id</string>
    <string name="input_room_name">Input room name</string>
</resources>
